# MediaManagerPlusPlus

./: CMakeLists.txt  README.md  TerminalAudacity.cbp  TerminalAudacity.kdev4  addPhotos.cpp  addPhotos.h  main.cpp  mainwindow.cpp  mainwindow.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
.kdev4/: TerminalAudacity.kdev4
resources/: MediaServer.xml
sql/: movies.sql  music.sql  photos.sql  shows.sql
src/: MediaServer.cpp  MediaServer.h  UUIDGen.cpp  UUIDGen.h  audioData.cpp  audioData.h  browser.cpp  browser.h  browser.ui  databasehandler.cpp  databasehandler.h  filemanager.cpp  filemanager.h  main.cpp
src/ui/: MainWindow.ui  config.ini  setupWindow.ui
ui/: mainwindow.ui
